tests/cases/parser/literals/goodbye_world.stderr
error: unclosed string literal
 --> $DIR/goodbye_world.hash:3:8
2 |   
3 |   print("goodbye world...
  |          ^^^^^^^^^^^^^^^^^^ here
