tests/cases/parser/literals/goodbye_world.hash
// run=fail, stage=parse

print("goodbye world...
